fixed browse grid overflow issue

--- a/src/scss/_browse-grid.scss
+++ b/src/scss/_browse-grid.scss
@@ -1,7 +1,7 @@
 .browse-grid {
   display: grid;
   height: 100%;
-  grid-template-columns: repeat(3, minmax(19.5rem, 1fr));
+  grid-template-columns: repeat(3, minmax(15.5rem, 1fr));
   grid-template-rows: repeat(2, 1fr);
   gap: 1rem;
   padding: 2rem;
